@@ -46,9 +46,8 @@ the API.
 <h3>
 Obtaining Magick++</h3></center>
 As of Magick++ 5.2.4 and later, it is recommended to use the Magick++ distribution
-included in the he
-<a href="http://www.imagemagick.org/">ImageMagick</a>
-source releases. Earlier Magick++ versions are also included with the ImageMagick
+included in the <a href="http://www.imagemagick.org/">ImageMagick</a> source
+releases. Earlier Magick++ versions are also included with the ImageMagick
 source package, may be downloaded from this page, or retrieved&nbsp; via
 anonymous <a href="http://www.cyclic.com/">CVS</a>.
 <h4>
